WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
167402
REGRESSION (
r208902
): URLWithUserTypedString returns nil with file URLs
https://bugs.webkit.org/show_bug.cgi?id=167402
Summary
REGRESSION (r208902): URLWithUserTypedString returns nil with file URLs
Alex Christensen
Reported
2017-01-24 18:46:37 PST
REGRESSION (
r208902
): URLWithUserTypedString returns nil with file URLs
Attachments
Patch
(3.15 KB, patch)
2017-01-24 18:50 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(730.57 KB, application/zip)
2017-01-24 19:51 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(1.63 MB, application/zip)
2017-01-24 20:00 PST
,
Build Bot
no flags
Details
Patch
(3.10 KB, patch)
2017-01-24 20:58 PST
,
Alex Christensen
rniwa
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-01-24 18:50:09 PST
Created
attachment 299662
[details]
Patch
Build Bot
Comment 2
2017-01-24 19:51:03 PST
Comment on
attachment 299662
[details]
Patch
Attachment 299662
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2944327
New failing tests: fast/encoding/idn-security.html
Build Bot
Comment 3
2017-01-24 19:51:06 PST
Created
attachment 299670
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-01-24 20:00:29 PST
Comment on
attachment 299662
[details]
Patch
Attachment 299662
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2944339
New failing tests: fast/encoding/idn-security.html
Build Bot
Comment 5
2017-01-24 20:00:31 PST
Created
attachment 299671
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alex Christensen
Comment 6
2017-01-24 20:58:14 PST
Created
attachment 299678
[details]
Patch
Ryosuke Niwa
Comment 7
2017-01-24 21:29:46 PST
Comment on
attachment 299678
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299678&action=review
> Source/WebCore/ChangeLog:14 > + uidna_nameToASCII fails when length is 0.
LOL. That's so bad...
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug