REGRESSION (r208902): URLWithUserTypedString returns nil with file URLs https://bugs.webkit.org/show_bug.cgi?id=167402 Source/WebCore:

<rdar://problem/29896656>

Reviewed by Ryosuke Niwa.

Covered by a new API test.

* platform/mac/WebCoreNSURLExtras.mm:
(WebCore::mapHostNameWithRange):
uidna_IDNToASCII succeeds when length is 0.
uidna_nameToASCII fails when length is 0.
This causes bad things to happen with file URLs, which have no host, so their host length is 0.
This makes us match behavior before r208902.

Tools:


Reviewed by Ryosuke Niwa.

* TestWebKitAPI/Tests/WebCore/cocoa/URLExtras.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/184436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211137 268f45cc-cd09-0410-ab3c-d52691b4dbfc